Application class added